renamed:    .wrangler/tmp/bundle-9GThCA/middleware-insertion-facade.js -> .wrangler/tmp/bundle-A48Nm3/middleware-insertion-facade.js 	renamed:    .wrangler/tmp/bundle-9GThCA/middleware-loader.entry.ts -> .wrangler/tmp/bundle-A48Nm3/middleware-loader.entry.ts 	renamed:    .wrangler/tmp/bundle-IdduuD/middleware-insertion-facade.js -> .wrangler/tmp/bundle-Hlj5AR/middleware-insertion-facade.js 	renamed:    .wrangler/tmp/bundle-NO4rtR/middleware-loader.entry.ts -> .wrangler/tmp/bundle-Hlj5AR/middleware-loader.entry.ts 	deleted:    .wrangler/tmp/bundle-IdduuD/middleware-loader.entry.ts 	deleted:    .wrangler/tmp/bundle-NO4rtR/middleware-insertion-facade.js 	deleted:    .wrangler/tmp/bundle-tPaLa2/middleware-insertion-facade.js 	deleted:    .wrangler/tmp/bundle-tPaLa2/middleware-loader.entry.ts 	deleted:    .wrangler/tmp/dev-7F9vnD/functionsWorker-0.736364223560542.js 	deleted:    .wrangler/tmp/dev-7F9vnD/functionsWorker-0.736364223560542.js.map 	renamed:    .wrangler/tmp/dev-Olwopj/functionsWorker-0.6873566240511774.js -> .wrangler/tmp/dev-TgKV9G/functionsWorker-0.9986435896647681.js 	renamed:    .wrangler/tmp/dev-Olwopj/functionsWorker-0.6873566240511774.js.map -> .wrangler/tmp/dev-TgKV9G/functionsWorker-0.9986435896647681.js.map 	deleted:    .wrangler/tmp/pages-3YL68l/functionsWorker-0.6873566240511774.mjs 	deleted:    .wrangler/tmp/pages-3YL68l/functionsWorker-0.6873566240511774.mjs.map 	deleted:    .wrangler/tmp/pages-abZAwi/functionsRoutes-0.5550223467187311.mjs 	renamed:    .wrangler/tmp/pages-3YL68l/functionsRoutes-0.12032155410753997.mjs -> .wrangler/tmp/pages-kzYOzw/functionsRoutes-0.5792567236945432.mjs 	renamed:    .wrangler/tmp/pages-abZAwi/functionsWorker-0.736364223560542.mjs -> .wrangler/tmp/pages-kzYOzw/functionsWorker-0.9986435896647681.mjs 	renamed:    .wrangler/tmp/pages-abZAwi/functionsWorker-0.736364223560542.mjs.map -> .wrangler/tmp/pages-kzYOzw/functionsWorker-0.9986435896647681.mjs.map 	modified:   README.md 	modified:   js/core/theme.js 	modified:

--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
-  "removed": true,
-  "note": "Removed Node.js test artifacts by request."
+  "name": "tsd-site",
+  "private": true,
+  "scripts": {
+    "dev": "wrangler pages dev ."
+  },
+  "devDependencies": {
+    "wrangler": "^3.86.0"
+  }
 }
