Fix Pages build: use dist/ output dir, add DEV_MODE auth bypass for local dev\n\n- Change pages_build_output_dir from \".\" to \"dist\" (fixes \"build output\n  directory is outside of the repository\" error on Cloudflare Pages)\n- Add [build] command to copy static assets into dist/\n- Add DEV_MODE env var to admin/wrangler.toml for local dev auth bypass\n- Update verifyAdmin() in all 4 API files to skip Cloudflare Access\n  header check when DEV_MODE=true (fixes 403 on local CRUD operations)

--- a/admin/wrangler.toml
+++ b/admin/wrangler.toml
@@ -11,6 +11,10 @@ pages_build_output_dir = "public"
 # so it is never committed to the repository.
 ADMIN_EMAIL = "admin@tsdmyanmar.org"
 
+# DEV_MODE — set to "true" for local development to bypass Cloudflare Access auth.
+# NEVER set this in production. Remove or set to "false" before deploying.
+DEV_MODE = "true"
+
 # Bind Cloudflare R2 bucket for image uploads
 [[r2_buckets]]
 binding = "IMAGES"
