Move build command from wrangler.toml to package.json\n\nCloudflare Pages does not support [build] in wrangler.toml.\nMove the dist/ copy command to package.json \"build\" script instead.

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -6,10 +6,8 @@ name = "tsdmyanmar"
 compatibility_date = "2026-01-12"
 
 # Pages: copy static assets into dist/ (Cloudflare Pages rejects "." as output dir)
+# Build command lives in package.json "build" script (Pages doesn't support [build] in wrangler.toml)
 pages_build_output_dir = "dist"
-
-[build]
-command = "mkdir -p dist && for f in *; do case \"$f\" in dist|admin|functions|scripts|tests|docs|node_modules|wrangler.toml|package.json|package-lock.json) ;; *) cp -r \"$f\" dist/ ;; esac; done"
 
 # Bind your Cloudflare D1 database to the environment variable UPDATES_DB
 [[d1_databases]]
