--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tsd-site",
   "private": true,
   "scripts": {
+    "build": "mkdir -p dist && for f in *; do case \"$f\" in dist|admin|functions|scripts|tests|docs|node_modules|wrangler.toml|package.json|package-lock.json) ;; *) cp -r \"$f\" dist/ ;; esac; done",
     "dev": "wrangler pages dev ."
   },
   "devDependencies": {
