--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,9 +5,9 @@
 name = "tsdmyanmar"
 compatibility_date = "2026-01-12"
 
-# Pages: copy static assets into dist/ (Cloudflare Pages rejects "." as output dir)
-# Build command lives in package.json "build" script (Pages doesn't support [build] in wrangler.toml)
-pages_build_output_dir = "dist"
+# Build command & output directory are configured in the Cloudflare Pages dashboard.
+# Do NOT set pages_build_output_dir here — the v2 BETA wrangler.toml reader
+# resolves the path incorrectly (prepends ../) causing "outside of repository" errors.
 
 # Bind your Cloudflare D1 database to the environment variable UPDATES_DB
 [[d1_databases]]
