--- a/wrangler.toml
+++ b/wrangler.toml
@@ -29,6 +29,10 @@ bucket_name = "tsd-images"
 # so it is never committed to the repository.
 ADMIN_EMAIL = "admin@tsdmyanmar.org"
 
+# DEV_MODE — set to "true" for local development to bypass Cloudflare Access auth.
+# NEVER set this in production. Remove or set to "false" before deploying.
+DEV_MODE = "true"
+
 # Optional: add other settings such as zone_id, account_id, or site configuration
 # Example:
 # account_id = "your-account-id"
