--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,9 +5,9 @@
 name = "tsdmyanmar"
 compatibility_date = "2026-01-12"
 
-# Build command & output directory are configured in the Cloudflare Pages dashboard.
-# Do NOT set pages_build_output_dir here — the v2 BETA wrangler.toml reader
-# resolves the path incorrectly (prepends ../) causing "outside of repository" errors.
+# Required for Git-based Cloudflare Pages deployments to read bindings from this file.
+# Must match the build script output directory (npm run build → dist/).
+pages_build_output_dir = "dist"
 
 # Bind your Cloudflare D1 database to the environment variable UPDATES_DB
 [[d1_databases]]
@@ -30,8 +30,8 @@ bucket_name = "tsd-images"
 ADMIN_EMAIL = "admin@tsdmyanmar.org"
 
 # DEV_MODE — set to "true" for local development to bypass Cloudflare Access auth.
-# NEVER set this in production. Remove or set to "false" before deploying.
-DEV_MODE = "true"
+# NEVER set this in production. For local dev, override with `wrangler pages dev --var DEV_MODE:true`
+# DEV_MODE = "true"
 
 # Optional: add other settings such as zone_id, account_id, or site configuration
 # Example:
